# sygaldreye

./: .clang-tidy  .gitignore  AGENTS.md  BUILDER.md  CMakeLists.txt  HANDOFF.md  README.md  adr.md  flake.nix  result  stage0.md  status.md  vision.md
.claude/skills/: develop.md
.github/workflows/: conformance.yml
agent_notes/: type-theory.md
app/: AndroidManifest.xml
app/hello/: main.cpp
app/spectator/: CMakeLists.txt  spectator_main.cpp
app/web/: CMakeLists.txt  web_main.cpp
architecture/: 00-glossary.md  01-overview.md  02-data-naming-kinds.md  03-store.md  04-execution.md  05-compilation.md  06-stage0-boot.md  07-capability-packages.md  08-mesh-trust.md  09-editor-documents.md  10-laws.md  11-language-core.md  12-authoring-conformability.md  13-native-contract.md  14-formats-protocols.md  15-time-concurrency-faults.md  16-the-core.md  17-conformance-evolution.md  18-appendix-greenfield.md  19-appendix-genealogy.md  README.md  mkpdf.sh
assets/graphs/: atmos_synth_g.json  aurora.json  chime_synth_g.json  control_panel.json  creature_synth_g.json  editor.json  engine_synth_g.json  fire_synth_g.json  forest.json  rain_synth_g.json  sky.json  water_synth_g.json
companion/: companion.py  compile_frozen.py  compile_node.py  freeze_graph.py  melotts_smoke.py  quest_voice_graph.json  requirements.txt  transcribe_cli.py
companion/claude_vr/: CLAUDE.md  speak_last.sh  voice_hooks.json
components/app/: CMakeLists.txt  app.cpp  app.design.md  xr.cpp
components/app_snapshot/: CMakeLists.txt  app_snapshot.cpp
components/atmos_synth/: CMakeLists.txt  atmos_synth.cpp  atmos_synth.hpp
components/audio_engine/: CMakeLists.txt  audio_engine.cpp  audio_engine.hpp
components/audio_output/: CMakeLists.txt  audio_output.test.cpp  audio_output_android.cpp  audio_output_sdl.cpp
components/audio_region/: CMakeLists.txt  audio_region.cpp  audio_region.hpp  audio_region.test.cpp
components/aurora/: CMakeLists.txt  aurora.cpp  aurora.hpp
components/aurora_curtain/: CMakeLists.txt  aurora_curtain.cpp  aurora_curtain.design.md  aurora_curtain.hpp
components/billboard_quad/: CMakeLists.txt  billboard_quad.cpp  billboard_quad.hpp
components/biquad_filter/: biquad_filter.cpp
components/card_labels_mesh/: card_labels_mesh.cpp  card_labels_mesh.design.md  card_labels_mesh.hpp  card_labels_mesh.test.cpp
components/card_widgets_mesh/: card_widgets_mesh.cpp  card_widgets_mesh.hpp
components/chime_synth/: CMakeLists.txt  chime_synth.cpp  chime_synth.hpp
components/chladni/: CMakeLists.txt  chladni.cpp  chladni.hpp
components/claude_tmux/: CMakeLists.txt  claude_tmux.cpp  claude_tmux.hpp  claude_tmux.test.cpp
components/color_mesh/: CMakeLists.txt  color_mesh.design.md  color_mesh.test.cpp
components/component_registry/: CMakeLists.txt  component_registry.cpp  component_registry.hpp  component_registry.test.cpp  hot_test_node.cpp
components/cos_lut/: cos_lut.hpp
components/creature_synth/: CMakeLists.txt  creature_synth.cpp  creature_synth.hpp  creature_synth.test.cpp
components/cube_mesh/: CMakeLists.txt  cube_mesh.cpp  cube_mesh.design.md  cube_mesh.hpp
components/cylinder_mesh/: CMakeLists.txt  cylinder_mesh.cpp  cylinder_mesh.design.md  cylinder_mesh.hpp  cylinder_mesh.test.cpp
components/edit_sink/: CMakeLists.txt  edit_sink.hpp  edit_sink.test.cpp
components/editor_integration/: CMakeLists.txt  editor_integration.design.md  editor_integration.test.cpp
components/editor_layout/: CMakeLists.txt  editor_layout.cpp  editor_layout.design.md  editor_layout.hpp  editor_layout.test.cpp
components/editor_wires/: CMakeLists.txt  editor_wires.cpp  editor_wires.design.md  editor_wires.hpp
components/engine_synth/: CMakeLists.txt  engine_synth.cpp  engine_synth.hpp
components/event_queue/: CMakeLists.txt  event_queue.design.md  event_queue.test.cpp
components/eyeballs_node_abi/: CMakeLists.txt  eyeballs_node_abi.h  eyeballs_node_abi.hpp  eyeballs_node_abi.test.cpp
components/flat_mesh/: CMakeLists.txt  flat_mesh.design.md  flat_mesh.hpp  flat_mesh.test.cpp
components/flat_shader/: CMakeLists.txt  flat_shader.cpp  flat_shader.design.md  flat_shader.hpp
components/float_mapper/: CMakeLists.txt  float_mapper.cpp  float_mapper.hpp  float_mapper.test.cpp
components/gl_program/: CMakeLists.txt  gl_program.cpp  gl_program.hpp
components/grab_detector/: CMakeLists.txt  grab_detector.cpp
components/graph_source/: CMakeLists.txt  graph_source.cpp  graph_source.design.md  graph_source.hpp
conformance/: HARNESS.md  STRENGTHENINGS.md  core-names.txt  extract_manifest.py  gates.sh  manifest.json  run.py
decree/: syg.prim.atom.construct.v0.0.0.md  syg.prim.structure.construct.v0.0.0.md  syg.substrate.v0.0.0.md
documentary/: log.md
graphs/: chime.json  hello-cosine.json  palette_osc.json
guides/: README.md  authoring-a-graph.md
planning/: architecture_handoff.md  bootloader.md  conformability_lifting.md  datasets.md  edge_executor.design.md  embodiment_plan.md  kernel_extraction.md  lexicon.md  lifting_and_editor_decomposition.md  naming.md  network_bridge.md  overview.md  phase-1-param-registry.md  phase-10-signal-flow.md  phase-12-rich-port-types.md  phase-2-networking.md  phase-4-plugin-abi.md  phase-5-universal-signal-graph.md  phase-7-vr-editor.md  phase-9-static-compilation.md  phase-c-design.md  render_as_nodes.md  rhizome.md  sprint-2-overview.md  sprint-3-integration-tests.md  status.md  subgraph.md  travis-summary.md  trust.md  vision.md
probe/: CMakeLists.txt
reports/: audit_conformability_editor_arc.md  concurrency-design-notes.md  linux_host_spectator.md  set-flow.tex  web-render-feasibility.md
sh/: build.sh  fetch_models.sh  nix_shell_guard.sh  push_graphs.sh  run.sh  snapshot.sh  test.sh  test_host.sh
src/: env.hpp  env.test.cpp  graph.hpp  graph.test.cpp  hash.hpp  human_sketch.cpp  node.hpp  registry.hpp  registry.test.cpp  stage0.hpp  stage0.notes.md  stage0.test.cpp  syg.hpp  types.hpp  types.test.cpp  variant.hpp  variant.test.cpp
vocabulary/: audio-splice.json  codegen.json  kinds.json  packages.json
(+1409 files in other folders)
