if(ANDROID)
    add_library(audio_output STATIC audio_output_android.cpp)
    target_link_libraries(audio_output PUBLIC aaudio)
elseif(EMSCRIPTEN)
    add_library(audio_output STATIC audio_output_sdl.cpp)
    target_compile_options(audio_output PRIVATE -sUSE_SDL=2)
    target_link_options(audio_output INTERFACE -sUSE_SDL=2)
else()
    add_library(audio_output STATIC audio_output_sdl.cpp)
    find_package(SDL2 REQUIRED)
    target_link_libraries(audio_output PUBLIC SDL2::SDL2)
endif()

target_include_directories(audio_output PUBLIC .)
target_compile_options(audio_output PRIVATE -Wall -Wextra)
