add_library(cylinder_mesh STATIC cylinder_mesh.cpp)
target_include_directories(cylinder_mesh PUBLIC .)
target_include_directories(cylinder_mesh PUBLIC $ENV{EIGEN3_INCLUDE_DIR})
target_link_libraries(cylinder_mesh PRIVATE log_component)
target_compile_options(cylinder_mesh PRIVATE -Wall -Wextra)

if(CMAKE_CROSSCOMPILING)
    target_link_libraries(cylinder_mesh PRIVATE GLESv3)
else()
    target_link_libraries(cylinder_mesh PRIVATE GLESv2)
endif()
