add_library(flat_shader STATIC flat_shader.cpp)
target_include_directories(flat_shader PUBLIC .)
target_include_directories(flat_shader PUBLIC $ENV{EIGEN3_INCLUDE_DIR})
target_link_libraries(flat_shader PUBLIC gl_program log_component)
target_compile_options(flat_shader PRIVATE -Wall -Wextra)

if(CMAKE_CROSSCOMPILING)
    target_link_libraries(flat_shader PUBLIC GLESv3)
else()
    target_link_libraries(flat_shader PUBLIC GLESv2)
endif()
