add_library(flat_shader INTERFACE)
target_include_directories(flat_shader INTERFACE .)
target_link_libraries(flat_shader INTERFACE eyeballs_node_abi render_payloads)

if(NOT CMAKE_CROSSCOMPILING)
    find_package(GTest REQUIRED)
    add_executable(flat_shader_test flat_shader.test.cpp)
    target_link_libraries(flat_shader_test PRIVATE flat_shader GTest::gtest_main)
    target_compile_options(flat_shader_test PRIVATE -Wall -Wextra)
endif()
